# switchboard

./: .gitignore  Cargo.toml  Dockerfile  README.md
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  config.rs  db.rs  ingest.rs  live.rs  main.rs  models.rs  mqtt.rs  sim.rs  state.rs  vault.rs  ws.rs
crates/core/src/api/: alerts.rs  auth.rs  commands.rs  delivery.rs  devices.rs  fleets.rs  logs.rs  mod.rs  operators.rs  rules.rs  settings.rs
crates/web/: Cargo.toml  Trunk.toml  index.html
crates/web/src/: api.rs  app.rs  live.rs  main.rs
crates/web/style/: main.css
docs/: TECHNICAL-BRIEF.md
