[package]
name = "switchboard-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["http", "websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Window", "Location"] }
